<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="25dp"
        android:text="@string/einzelbeispiel"
        android:textColor="@color/blue"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_of_app"
        app:srcCompat="@drawable/applogo"
        tools:srcCompat="@drawable/applogo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/blue">

        <EditText
            android:id="@+id/editTextNumberSigned2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/matrikelnummer"
            android:inputType="numberSigned"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:autofillHints="Matrikelnummer"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tcpFeature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/tcp_feature"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:cardBackgroundColor="@color/blue">

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/white"
            android:elevation="0dp"
            android:onClick="runTCP"
            android:text="@string/send"
            android:textColor="@color/blue"
            app:cornerRadius="0dp" />

        <TextView
            android:id="@+id/tcpResultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="10dp"
            android:text="@string/result"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tcpResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/erweiterungAufgabe2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:elevation="10dp"
        android:text="@string/erweiterung_aufgabe_2"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/blue">

        <Button
            android:id="@+id/calcBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/white"
            android:onClick="runFeature"
            android:text="@string/calc"
            android:textColor="@color/blue"
            app:cornerRadius="0dp" />

        <TextView
            android:id="@+id/aufgabe2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="10dp"
            android:text="@string/result"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/aufgabe2Text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

</LinearLayout>